--- a/pak-ios/storyboards/Base.lproj/Main.storyboard
+++ b/pak-ios/storyboards/Base.lproj/Main.storyboard
@@ -270,7 +270,7 @@
         <!--Sidebar Menu-->
         <scene sceneID="82z-P1-Tod">
             <objects>
-                <viewController id="tFa-yd-rci" userLabel="Sidebar Menu" sceneMemberID="viewController">
+                <viewController id="tFa-yd-rci" userLabel="Sidebar Menu" customClass="MenuController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="f6C-gn-TS6">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -998,6 +998,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                         <outlet property="tf_password" destination="S8b-ck-Gud" id="931-Yb-M4i"/>
                         <outlet property="tf_phone" destination="F4f-9f-SpJ" id="2XH-4P-Oer"/>
                         <outlet property="tf_repassword" destination="Ryu-z3-Akg" id="4pC-CS-dcq"/>
+                        <segue destination="H84-IG-3ag" kind="show" identifier="segue_register_main" id="kk5-HE-cyu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QLn-wc-3H5" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1012,7 +1013,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="RDV-KI-R66">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="tintColor" red="1" green="0.47058823529999999" blue="0.30980392159999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" red="0.54117647059999996" green="0.83529411760000005" blue="0.41568627450000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" red="1" green="0.47058823529999999" blue="0.30980392159999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -1034,7 +1035,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
         <!--Menu-->
         <scene sceneID="Drn-bI-Pwk">
             <objects>
-                <viewController id="mRr-ug-7Gy" userLabel="Menu" sceneMemberID="viewController">
+                <viewController id="mRr-ug-7Gy" userLabel="Menu" customClass="MainControllerOut" customModule="pak_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ysb-Bg-oBv">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1250,6 +1251,6 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
         <image name="dwb_pak_usericon" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="dfd-t0-Qql"/>
+        <segue reference="kk5-HE-cyu"/>
     </inferredMetricsTieBreakers>
 </document>
